# DevOpsComplexityCMake

./: .devcontainer.json  .env  CMakeLists.txt  CMakePresets.json  README.md  compose.yml  debian.cmake  srcComplexity.cpp  srcMLXPathCount.cpp  srcMLXPathCount.cpp.xml  srcMLXPathCount.hpp  srcMLXPathCountTest.cpp  toolchain-gnu_clang.cmake  toolchain-msvc.cmake  vcpkg.json
.circleci/: config.yml
.github/workflows/: Build.yml  FedoraBuild.yml  Parameter.yml
docker/fedora/: Dockerfile
docker/ubuntu/: Dockerfile
testsuite/: testComplexity1.sh  testComplexity2.sh
